# apps/api/openapi/openapi.json
@@ -7545,6 +7545,18 @@
                         }
                       ]
                     },
+                    "baseDurationMs": {
+                      "anyOf": [
+                        {
+                          "type": "integer",
+                          "exclusiveMinimum": 0,
+                          "maximum": 9007199254740991
+                        },
+                        {
+                          "type": "null"
+                        }
+                      ]
+                    },
                     "albumArtUrl": {
                       "anyOf": [
                         {
@@ -7562,6 +7574,7 @@
                     "title",
                     "artist",
                     "durationMs",
+                    "baseDurationMs",
                     "albumArtUrl"
                   ],
                   "additionalProperties": false
